test/bad/arrays/empty02.px

[Int] a
[Float] b
print a == [] == b
